Segregate sensed land, Replace mode based charts into different Stacked Bar Charts.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -181,15 +181,6 @@
     "    else:\n",
     "        print(\"expanded_ct is empty\")\n",
     "\n",
-    "    if not data_eb.empty:\n",
-    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced mode)\" )\n",
-    "        all_data_frames.append(df_replaced_tc)\n",
-    "        if not df_replaced_tc.empty:\n",
-    "            bar_count += 1\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
-    "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        if not df_sensed_tc.empty:\n",
     "            bar_count += 1\n",
@@ -207,10 +198,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52711e01",
+   "metadata": {},
+   "source": [
+    "### 2. 100% Stacked Bar Charts (Represents Replaced mode - Number of Trips)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6226112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality= \"Number of trips for replaced mode\"\n",
+    "file_name = f'ntrips_total_replaced_mode{file_suffix}'\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    all_data_frames = []\n",
+    "    plot_title = plot_title_no_quality\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
+    "        all_data_frames.append(df_replaced_tc)\n",
+    "        if not df_replaced_tc.empty:\n",
+    "            bar_count += 1\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8fc63a45",
    "metadata": {},
    "source": [
-    "### 2. 100% Stacked Bar Charts (Represents 80th of the Number of Trips)"
+    "### 3. 100% Stacked Bar Charts (Represents 80th of the Number of Trips)"
    ]
   },
   {
@@ -276,7 +307,7 @@
    "id": "7fa4f3da",
    "metadata": {},
    "source": [
-    "### 3. 100% Stacked Bar Charts (Represents Commute Trips) "
+    "### 4. 100% Stacked Bar Charts (Represents Commute Trips) "
    ]
   },
   {
@@ -321,7 +352,7 @@
    "id": "b560cb32",
    "metadata": {},
    "source": [
-    "### 4. 100% Stacked Bar Charts (Represents Distance by Mode)"
+    "### 5. 100% Stacked Bar Charts (Represents Distance by Mode)"
    ]
   },
   {
@@ -355,7 +386,6 @@
     "    all_data_frames = []\n",
     "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Trip distance)\")\n",
     "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
-    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
@@ -366,19 +396,47 @@
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
-    "    if not data_eb.empty:\n",
-    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
-    "        if not df_replaced_dist.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_replaced_dist)\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
-    "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        if not df_sensed_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist)\n",
+    "    else:\n",
+    "        print(\"expanded_ct_sensed is empty.\")\n",
+    "\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc9be240",
+   "metadata": {},
+   "source": [
+    "### 6. 100% Stacked Bar Charts (Represents Distance by Mode) - Land"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1338268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
+    "file_name = f\"total_trip_length_land{file_suffix}\"\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    all_data_frames = []\n",
+    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
+    "\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Sensed: \" + quality_text\n",
+    "\n",
+    "    if not expanded_ct_sensed.empty:\n",
     "        if not df_sensed_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist_land)\n",
@@ -395,10 +453,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7aa03722",
+   "metadata": {},
+   "source": [
+    "### 7. 100% Stacked Bar Charts (Represents Distance by Mode) - Replaced Mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a872545c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_distance_data(df, df_col, trip_type):\n",
+    "    dist = df.groupby(df_col).agg({distance_col: ['sum', 'count', 'mean']})\n",
+    "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
+    "\n",
+    "    dist_dict = dict(zip(dist[df_col], dist['Total (' + label_units_lower + ')']))\n",
+    "    labels_dist = []\n",
+    "    values_dist = []\n",
+    "\n",
+    "    for x, y in dist_dict.items():\n",
+    "        labels_dist.append(x)\n",
+    "        values_dist.append(y)\n",
+    "\n",
+    "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
+    "\n",
+    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
+    "file_name = f\"total_trip_length_replaced_mode{file_suffix}\"\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    all_data_frames = []\n",
+    "\n",
+    "    plot_title = plot_title_no_quality\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "        if not df_replaced_dist.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_replaced_dist)\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ffb2df0b",
    "metadata": {},
    "source": [
-    "### 5. 100% Stacked Bar Charts (Count by Purpose)"
+    "### 8. 100% Stacked Bar Charts (Count by Purpose)"
    ]
   },
   {
