Update Labeled bar for land based distance computation (Stacked Bar Chart).

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -432,9 +432,17 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
+    "    df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', \"Labeled by user\\n (Trip distance - Land)\")\n",
     "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Sensed: \" + quality_text\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
+    "\n",
+    "    if not expanded_ct_sensed.empty:\n",
+    "        if not df_confirm_dist_land.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_confirm_dist_land)\n",
+    "    else:\n",
+    "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        if not df_sensed_dist_land.empty:\n",
