--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -211,29 +211,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality= \"Number of trips for replaced mode\"\n",
-    "file_name = f'ntrips_total_replaced_mode{file_suffix}'\n",
+    "# Only applicable for program\n",
+    "if study_type == \"program\":\n",
+    "    plot_title_no_quality= \"Number of trips for replaced mode\"\n",
+    "    file_name = f'ntrips_total_replaced_mode{file_suffix}'\n",
     "\n",
-    "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
-    "    plot_title = plot_title_no_quality\n",
+    "    try:\n",
+    "        bar_count = 0\n",
+    "        all_data_frames = []\n",
+    "        plot_title = plot_title_no_quality\n",
     "\n",
-    "    if not data_eb.empty:\n",
-    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
-    "        all_data_frames.append(df_replaced_tc)\n",
-    "        if not df_replaced_tc.empty:\n",
-    "            bar_count += 1\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
+    "        if not data_eb.empty:\n",
+    "            df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
+    "            all_data_frames.append(df_replaced_tc)\n",
+    "            if not df_replaced_tc.empty:\n",
+    "                bar_count += 1\n",
+    "                plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "        else:\n",
+    "            print(\"data_eb is empty.\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+    "        result_df = merge_dataframes(all_data_frames)\n",
+    "        stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -474,30 +476,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
-    "file_name = f\"total_trip_length_replaced_mode{file_suffix}\"\n",
+    "# Applicable only for program\n",
+    "if study_type == \"program\":\n",
+    "    plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
+    "    file_name = f\"total_trip_length_replaced_mode{file_suffix}\"\n",
     "\n",
-    "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
+    "    try:\n",
+    "        bar_count = 0\n",
+    "        all_data_frames = []\n",
     "\n",
-    "    plot_title = plot_title_no_quality\n",
+    "        plot_title = plot_title_no_quality\n",
     "\n",
-    "    if not data_eb.empty:\n",
-    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
-    "        if not df_replaced_dist.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_replaced_dist)\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
-    "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
+    "        if not data_eb.empty:\n",
+    "            df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "            if not df_replaced_dist.empty:\n",
+    "                bar_count += 1\n",
+    "                all_data_frames.append(df_replaced_dist)\n",
+    "                plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "        else:\n",
+    "            print(\"data_eb is empty.\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+    "        result_df = merge_dataframes(all_data_frames)\n",
+    "        stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "        alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -809,27 +813,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Average \" + label_units + \" for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
-    "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
+    "if study_type == \"program\":\n",
+    "    plot_title_no_quality=\"Average \" + label_units + \" for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
+    "    file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "\n",
-    "try:\n",
-    "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
-    "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
-    "    dg = dg.reset_index()\n",
-    "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False) \n",
+    "    try:\n",
+    "        dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
+    "        dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
+    "        dg = dg.reset_index()\n",
+    "        dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "        data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False) \n",
     "\n",
-    "    x='Replaced_mode'\n",
-    "    y='Average ('+label_units_lower+')'\n",
-    "    y2 = \"Count\"\n",
+    "        x='Replaced_mode'\n",
+    "        y='Average ('+label_units_lower+')'\n",
+    "        y2 = \"Count\"\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.Replaced_mode), file_name, plot_title)\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.Replaced_mode), file_name, plot_title)\n",
     "\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -847,24 +852,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by day\"\n",
-    "file_name =f'ntrips_{mode_of_interest}_per_day%s' % file_suffix\n",
+    "if study_type == \"program\":\n",
+    "    plot_title_no_quality=f\"Number of {mode_of_interest} trips by day\"\n",
+    "    file_name =f'ntrips_{mode_of_interest}_per_day%s' % file_suffix\n",
     "\n",
-    "try:\n",
-    "    fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
-    "    fq_days = fq_days.reset_index()\n",
-    "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
+    "    try:\n",
+    "        fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "        fq_days = fq_days.reset_index()\n",
+    "        fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
     "\n",
-    "    data = fq_days\n",
-    "    x = 'Day of the Month'\n",
-    "    y = 'Number of Trips'\n",
+    "        data = fq_days\n",
+    "        x = 'Day of the Month'\n",
+    "        y = 'Number of Trips'\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_day(data,x,y,plot_title,file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        barplot_day(data,x,y,plot_title,file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -882,27 +888,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by weekday\"\n",
-    "file_name =f'ntrips_{mode_of_interest}_per_weekday%s' % file_suffix\n",
+    "if study_type == \"program\":\n",
+    "    plot_title_no_quality=f\"Number of {mode_of_interest} trips by weekday\"\n",
+    "    file_name =f'ntrips_{mode_of_interest}_per_weekday%s' % file_suffix\n",
     "\n",
-    "try:\n",
-    "    fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
-    "    fq_weekdays = fq_weekdays.reset_index()\n",
-    "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
-    "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
-    "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "    try:\n",
+    "        fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "        fq_weekdays = fq_weekdays.reset_index()\n",
+    "        fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "        weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "        fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
     "\n",
-    "    data = fq_weekdays\n",
-    "    x = 'Weekday'\n",
-    "    y = 'Number of Trips'\n",
+    "        data = fq_weekdays\n",
+    "        x = 'Weekday'\n",
+    "        y = 'Number of Trips'\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_day(data,x,y,plot_title,file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        barplot_day(data,x,y,plot_title,file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc3dd6aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
