Update the study_type to program from study.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -28,7 +28,7 @@
     "year = 2020\n",
     "month = 11\n",
     "program = \"default\"\n",
-    "study_type = \"study\"\n",
+    "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
