connect charts to frontend
added code to the index.html file to fetch surveys, add each of the options for the survey questions, and display the charts by default on the dashboard

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "program = \"dfc-fermata\"\n",
+    "year = 2024\n",
+    "month = 3\n",
+    "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
@@ -233,6 +233,7 @@
    "outputs": [],
    "source": [
     "file_suffix = scaffolding.get_file_suffix(year, month, program)\n",
+    "print(file_suffix)\n",
     "\n",
     "#create one plot per question\n",
     "for col in df_responses.columns:\n",
