translate answers, drop zero other
use labels except for likert, use values

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -106,11 +106,14 @@
     "        labels = doc.getElementsByTagName(\"label\") \n",
     "        for label in labels:\n",
     "            if(bool(label.parentNode.getAttribute(\"ref\"))):\n",
-    "                print(label.parentNode.getAttribute(\"ref\").split('/')[-1])\n",
-    "                print(label.firstChild.data)\n",
-    "                \n",
     "                quest_dict[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
-    "    \n",
+    "            \n",
+    "            if label.parentNode.nodeName == 'item':\n",
+    "                if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
+    "                    opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data\n",
+    "                else:\n",
+    "                    opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data  \n",
+    "\n",
     "    return opt_dict, quest_dict\n",
     "\n",
     "\n",
@@ -125,13 +128,11 @@
     "        row = pd.json_normalize(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'][data_key])\n",
     "        rows.append(row)\n",
     "    df = pd.concat(rows)\n",
-    "#     print(df.head())\n",
     "    \n",
     "    rename_nests = {}\n",
     "    for col in df.columns:\n",
     "        rename_nests[col] = col.split('.')[-1]\n",
-    "    \n",
-    "    print(rename_nests)\n",
+    "\n",
     "    df = df.rename(columns=rename_nests)\n",
     "    \n",
     "    #drop the non-question columns, should leave behind all the questions\n",
@@ -146,9 +147,8 @@
     "#if people are selecting many different combinations, could be large\n",
     "def traslate_options(labels, opt_dict):\n",
     "    for i in range(len(labels)):\n",
-    "        l_labels = labels[i].split(\" \")\n",
+    "        l_labels = str(labels[i]).split(\" \")\n",
     "        for k in range(len(l_labels)):\n",
-    "            print()\n",
     "            l_labels[k] = opt_dict[l_labels[k]]\n",
     "        sep = \"\\n\"\n",
     "        labels[i] = sep.join(l_labels)\n",
@@ -209,18 +209,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe65f88",
+   "id": "7b7001a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#create translation dictionaries\n",
     "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
     "\n",
-    "print(opt_dict)\n",
-    "print(quest_dict)\n",
-    "\n",
     "#format survey trips into responses dataframe\n",
-    "df_responses = create_dataframe(survey_trips)"
+    "df_responses = create_dataframe(survey_trips)\n",
+    "\n",
+    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
    ]
   },
   {
@@ -232,9 +231,6 @@
    },
    "outputs": [],
    "source": [
-    "file_suffix = scaffolding.get_file_suffix(year, month, program)\n",
-    "print(file_suffix)\n",
-    "\n",
     "#create one plot per question\n",
     "for col in df_responses.columns:\n",
     "    filename = col + file_suffix\n",
@@ -243,7 +239,7 @@
     "    quest_frame = df_responses.copy()\n",
     "    quest_frame = quest_frame[quest_frame[col] != \"\"] #could have blank responses for non-mandatory ?s\n",
     "    labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
-    "#     labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
+    "    labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
     "    values = quest_frame[col].value_counts(dropna=True).tolist()\n",
     "     \n",
     "    #if other is 0 don't display it :)\n",
