--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -26,24 +26,40 @@
    "source": [
     "#probably going to end up passing this in\n",
     "survey_info =  {\n",
-    "    \"surveys\": {\n",
-    "      \"UserProfileSurvey\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/JGreenlee/nrel-openpath-deploy-configs/fermata-demo/survey_resources/dfc-fermata/fermata-onboarding-v0.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/demographic_survey\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      \"surveys\": {\n",
+    "        \"UserProfileSurvey\": {\n",
+    "          \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/washingtoncommons/washingtoncommons-onboarding-survey-v4.xml\",\n",
+    "          \"version\": 1.3,\n",
+    "          \"compatibleWith\": 1,\n",
+    "          \"dataKey\": \"manual/demographic_survey\",\n",
+    "          \"labelTemplate\": {\n",
+    "            \"en\": \"Answered\",\n",
+    "            \"es\": \"Contestada\"\n",
+    "          }\n",
+    "        },\n",
+    "        \"TripConfirmSurvey\": {\n",
+    "            \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/washingtoncommons/washingtoncommons-trip-survey-v2.json\",\n",
+    "            \"version\": 1.2,\n",
+    "            \"compatibleWith\": 1,\n",
+    "            \"dataKey\": \"manual/trip_user_input\",\n",
+    "            \"labelVars\": {\n",
+    "              \"modes\": {\n",
+    "                \"key\": \"What_was_the_main_pu_f_this_trip_trip_leg\",\n",
+    "                \"type\": \"length\"\n",
+    "              },\n",
+    "              \"purposes\": {\n",
+    "                \"key\": \"_2_What_was_the_mode_of_transp\",\n",
+    "                \"type\": \"length\"\n",
+    "              }\n",
+    "            },\n",
+    "            \"labelTemplate\": {\n",
+    "              \"en\": \"{ purposes, plural, =0 {No purposes} one {1 purpose} other {# purposes} }, { modes, plural, =0 {No modes} one {1 mode} other {# modes} }\",\n",
+    "              \"es\": \"{ purposes, plural, =0 {No propósitos} one {1 propósito} other {# propósitos} }, { modes, plural, =0 {No modos} one {1 modo} other {# modos} }\"\n",
+    "            }\n",
+    "          }\n",
     "      },\n",
-    "      \"TripConfirmSurvey\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/fermata-ev-return-trip-v0.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      }\n",
-    "    },\n",
-    "    \"trip-labels\": \"ENKETO\"\n",
-    "  }"
+    "      \"trip-labels\": \"ENKETO\"\n",
+    "    }"
    ]
   },
   {
@@ -111,9 +127,11 @@
     "            if label.parentNode.nodeName == 'item':\n",
     "                if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
     "                    opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data\n",
-    "                else:\n",
+    "                elif label.parentNode.getElementsByTagName(\"value\"):\n",
     "                    opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data  \n",
-    "\n",
+    "                elif label.parentNode.getElementsByTagName(\"name\"):\n",
+    "                    opt_dict[label.parentNode.getElementsByTagName(\"name\")[0].firstChild.data] = label.firstChild.data  \n",
+    "                    \n",
     "    return opt_dict, quest_dict\n",
     "\n",
     "\n",
@@ -137,7 +155,7 @@
     "    \n",
     "    #drop the non-question columns, should leave behind all the questions\n",
     "    #need to do this better, won't always be the same\n",
-    "    df = df.drop(columns = ['end', 'start', 'attrid', 'attrxmlns:orx', 'attrxmlns:orx', 'attrxmlns:jr', 'instanceID'])\n",
+    "    df = df.drop(columns = ['end', 'start', 'attrid', 'attrxmlns:orx', 'attrxmlns:orx', 'attrxmlns:jr', 'instanceID', 'deprecatedID'])\n",
     "\n",
     "    return df\n",
     "\n",
@@ -174,6 +192,7 @@
    "outputs": [],
    "source": [
     "#list of all surveys that are not a \"UserProfileSurvey\"\n",
+    "print(survey_info['surveys'])\n",
     "survey_list = list(survey_info['surveys'].keys())\n",
     "survey_list.remove('UserProfileSurvey')\n",
     "sheet_list = get_sheet_links(survey_list)\n",
@@ -215,6 +234,8 @@
    "source": [
     "#create translation dictionaries\n",
     "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
+    "print(opt_dict)\n",
+    "print(quest_dict)\n",
     "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
@@ -232,6 +253,7 @@
    "outputs": [],
    "source": [
     "#create one plot per question\n",
+    "print(df_responses.head())\n",
     "for col in df_responses.columns:\n",
     "    filename = col + file_suffix\n",
     "    print(filename)\n",
