Update else statement.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -177,14 +177,18 @@
     "        if not df_confirmed_tc.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirmed_tc)\n",
+    "        else:\n",
+    "            print(\"df_confirmed_tc is empty.\")\n",
     "    else:\n",
-    "        print(\"expanded_ct is empty\")\n",
+    "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        if not df_sensed_tc.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_tc)\n",
+    "        else:\n",
+    "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
     "\n",
@@ -227,6 +231,8 @@
     "            if not df_replaced_tc.empty:\n",
     "                bar_count += 1\n",
     "                plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "            else:\n",
+    "                print(\"df_replaced_tc is empty.\")\n",
     "        else:\n",
     "            print(\"data_eb is empty.\")\n",
     "\n",
@@ -283,6 +289,8 @@
     "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
+    "        else:\n",
+    "            print(\"df_confirmed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
@@ -293,6 +301,8 @@
     "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_sensed_tc_u80)\n",
+    "        else:\n",
+    "            print(\"df_sensed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
@@ -393,6 +403,8 @@
     "        if not df_confirm_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist)\n",
+    "        else:\n",
+    "            print(\"df_confirm_dist is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
@@ -401,6 +413,8 @@
     "        if not df_sensed_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist)\n",
+    "        else:\n",
+    "            print(\"df_sensed_dist is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
@@ -440,6 +454,8 @@
     "        if not df_confirm_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist_land)\n",
+    "        else:\n",
+    "            print(\"df_confirm_dist_land is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
@@ -448,6 +464,8 @@
     "        if not df_sensed_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist_land)\n",
+    "        else:\n",
+    "            print(\"df_sensed_dist_land is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
@@ -491,6 +509,8 @@
     "                bar_count += 1\n",
     "                all_data_frames.append(df_replaced_dist)\n",
     "                plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "            else:\n",
+    "                print(\"df_replaced_dist is empty.\")\n",
     "        else:\n",
     "            print(\"data_eb is empty.\")\n",
     "\n",
@@ -531,6 +551,8 @@
     "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
     "            bar_count += 1\n",
     "            all_tp_data_frames.append(df_purpose_trip)\n",
+    "        else:\n",
+    "            print(\"df_purpose_trip is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
@@ -540,6 +562,8 @@
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
     "            bar_count += 1\n",
     "            all_tp_data_frames.append(df_purpose_trip_eb)\n",
+    "        else:\n",
+    "            print(\"df_purpose_trip_eb is empty.\")\n",
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
