Update Markdown for individual Stacked Bar Charts.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -146,10 +146,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1af1f02b",
+   "metadata": {},
+   "source": [
+    "## 100% Stacked Bar Charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e50959c1",
    "metadata": {},
    "source": [
-    "### 1. 100% Stacked Bar Charts (Based on Number of Trips)"
+    "### 1. Represents Number of Trips"
    ]
   },
   {
@@ -205,7 +213,7 @@
    "id": "52711e01",
    "metadata": {},
    "source": [
-    "### 2. 100% Stacked Bar Charts (Represents Replaced mode - Number of Trips)"
+    "### 2. Represents Number of Trips for Replaced mode "
    ]
   },
   {
@@ -249,7 +257,7 @@
    "id": "8fc63a45",
    "metadata": {},
    "source": [
-    "### 3. 100% Stacked Bar Charts (Represents 80th of the Number of Trips)"
+    "### 3. Represents 80th percentile of the Number of Trips"
    ]
   },
   {
@@ -319,7 +327,7 @@
    "id": "7fa4f3da",
    "metadata": {},
    "source": [
-    "### 4. 100% Stacked Bar Charts (Represents Commute Trips) "
+    "### 4. Represents Commute Trips"
    ]
   },
   {
@@ -364,7 +372,7 @@
    "id": "b560cb32",
    "metadata": {},
    "source": [
-    "### 5. 100% Stacked Bar Charts (Represents Distance by Mode)"
+    "### 5. Represents Total Trip Length covered by each mode"
    ]
   },
   {
@@ -431,7 +439,7 @@
    "id": "bc9be240",
    "metadata": {},
    "source": [
-    "### 6. 100% Stacked Bar Charts (Represents Distance by Mode) - Land"
+    "### 6. Represents Total Trip Length covered by each mode in Land"
    ]
   },
   {
@@ -482,7 +490,7 @@
    "id": "7aa03722",
    "metadata": {},
    "source": [
-    "### 7. 100% Stacked Bar Charts (Represents Distance by Mode) - Replaced Mode"
+    "### 7. Represents Total Trip Length covered by Replaced Mode"
    ]
   },
   {
@@ -527,7 +535,7 @@
    "id": "ffb2df0b",
    "metadata": {},
    "source": [
-    "### 8. 100% Stacked Bar Charts (Count by Purpose)"
+    "### 8. Represents number of trips for each purpose"
    ]
   },
   {
