add check to prevent showing "label" questions
These will never have answers, so no need to chart them. Example was "Please rate the following statements: "

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -122,7 +122,8 @@
     "        labels = doc.getElementsByTagName(\"label\") \n",
     "        for label in labels:\n",
     "            if(bool(label.parentNode.getAttribute(\"ref\"))):\n",
-    "                quest_dict[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
+    "                if label.parentNode.getAttribute(\"appearance\") != \"label\": #label appearance = not a question?\n",
+    "                    quest_dict[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
     "            \n",
     "            if label.parentNode.nodeName == 'item':\n",
     "                if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
