clean up some print statements

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -193,7 +193,6 @@
    "outputs": [],
    "source": [
     "#list of all surveys that are not a \"UserProfileSurvey\"\n",
-    "print(survey_info['surveys'])\n",
     "survey_list = list(survey_info['surveys'].keys())\n",
     "survey_list.remove('UserProfileSurvey')\n",
     "sheet_list = get_sheet_links(survey_list)\n",
@@ -235,8 +234,8 @@
    "source": [
     "#create translation dictionaries\n",
     "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
-    "print(opt_dict)\n",
-    "print(quest_dict)\n",
+    "print(\"Questions dictionary:\\n\",quest_dict)\n",
+    "print(\"Options dictionary:\\n\", opt_dict)\n",
     "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
@@ -257,7 +256,6 @@
     "print(df_responses.head())\n",
     "for col in df_responses.columns:\n",
     "    filename = col + file_suffix\n",
-    "    print(filename)\n",
     "    \n",
     "    quest_frame = df_responses.copy()\n",
     "    quest_frame = quest_frame[quest_frame[col] != \"\"] #could have blank responses for non-mandatory ?s\n",
