drop columns that don't represent questions
all question names begin with a capital letter, so we can safely drop all columns that begin lowercase

had to change from a hardcoded list because different survey data had different extra columns, and we need this to be as general as possible to prevent extra maintanence in the future

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -154,9 +154,13 @@
     "\n",
     "    df = df.rename(columns=rename_nests)\n",
     "    \n",
-    "    #drop the non-question columns, should leave behind all the questions\n",
-    "    #need to do this better, won't always be the same\n",
-    "    df = df.drop(columns = ['end', 'start', 'attrid', 'attrxmlns:orx', 'attrxmlns:orx', 'attrxmlns:jr', 'instanceID', 'deprecatedID'])\n",
+    "    #drop the non-question columns, questions start with capital letters\n",
+    "    drop_cols = []\n",
+    "    for col_name in df.columns:\n",
+    "        if not col_name[0].isupper():\n",
+    "            drop_cols.append(col_name)\n",
+    "            \n",
+    "    df = df.drop(columns = drop_cols)\n",
     "\n",
     "    return df\n",
     "\n",
