fix failed charts and alt text
now properly showing the debug df and the alt text on all charts - including the ones that don't have enough data

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -226,7 +226,18 @@
     "survey_trips.head()\n",
     "\n",
     "#get quality text\n",
-    "qual_text = get_text(survey_trips)"
+    "qual_text = get_text(survey_trips)\n",
+    "\n",
+    "#debug_df\n",
+    "debug_df = pd.DataFrame.from_dict({\n",
+    "        \"year\": year,\n",
+    "        \"month\": month,\n",
+    "        \"Registered_participants\": len(scaffolding.get_participant_uuids(program, include_test_users)),\n",
+    "        \"Participants_with_at_least_one_trip\": scaffolding.unique_users(all_confirmed_trips),\n",
+    "        \"Participant_with_at_least_one_labeled_trip\": scaffolding.unique_users(survey_trips),\n",
+    "        \"Trips_with_at_least_one_label\": len(survey_trips)\n",
+    "        },\n",
+    "    orient='index', columns=[\"value\"])"
    ]
   },
   {
@@ -256,21 +267,25 @@
    },
    "outputs": [],
    "source": [
-    "#create one plot per question\n",
-    "print(df_responses.head())\n",
-    "for col in df_responses.columns:\n",
+    "#create one plot per question in the survey\n",
+    "for col in quest_dict.keys():\n",
     "    filename = col + file_suffix\n",
+    "    plot_title_no_quality = quest_dict[col]\n",
+    "\n",
+    "    try:\n",
+    "        plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "        quest_frame = df_responses.copy()\n",
+    "        quest_frame = quest_frame[quest_frame[col] != \"\"] #could have blank responses for non-mandatory ?s\n",
+    "        labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
+    "        labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
+    "        values = quest_frame[col].value_counts(dropna=True).tolist()\n",
+    "\n",
+    "        pie_chart_purpose(plot_title, labels, values, filename)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values, labels), filename, plot_title)\n",
     "    \n",
-    "    quest_frame = df_responses.copy()\n",
-    "    quest_frame = quest_frame[quest_frame[col] != \"\"] #could have blank responses for non-mandatory ?s\n",
-    "    labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
-    "    labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
-    "    values = quest_frame[col].value_counts(dropna=True).tolist()\n",
-    "     \n",
-    "    #if other is 0 don't display it :)\n",
-    "    #will only show questions in the current survey (not older versions) and that have at least 1 response\n",
-    "    if col in quest_dict and len(quest_frame[col]) != 0:\n",
-    "        pie_chart_purpose(quest_dict[col]+'\\n'+qual_text, labels, values, filename)"
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
+    "        alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)"
    ]
   }
  ],
