no need to drop columns
before, I was dropping all columns that were not survey questions

no longer needed because we are generating charts directly from the list of questions (not the data) - this also matches better with the frontend!

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -7,8 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2024\n",
-    "month = 3\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
@@ -153,14 +153,6 @@
     "        rename_nests[col] = col.split('.')[-1]\n",
     "\n",
     "    df = df.rename(columns=rename_nests)\n",
-    "    \n",
-    "    #drop the non-question columns, questions start with capital letters\n",
-    "    drop_cols = []\n",
-    "    for col_name in df.columns:\n",
-    "        if not col_name[0].isupper():\n",
-    "            drop_cols.append(col_name)\n",
-    "            \n",
-    "    df = df.drop(columns = drop_cols)\n",
     "\n",
     "    return df\n",
     "\n",
