pull out "input" type questions
Filter off the "input" type questions -- such as "other, please specify" so that we could choose the best way to display them later

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -122,7 +122,9 @@
     "        labels = doc.getElementsByTagName(\"label\") \n",
     "        for label in labels:\n",
     "            if(bool(label.parentNode.getAttribute(\"ref\"))):\n",
-    "                if label.parentNode.getAttribute(\"appearance\") != \"label\": #label appearance = not a question?\n",
+    "                #label appearance = not a question?\n",
+    "                #nodeName input -- to word cloud as a later addition?\n",
+    "                if label.parentNode.getAttribute(\"appearance\") != \"label\" && label.parentNode.nodeName != \"input\": \n",
     "                    quest_dict[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
     "            \n",
     "            if label.parentNode.nodeName == 'item':\n",
